	  but will). (2013-7-12).
	* arch/arm/include/armv7-a and src/armv7-a:  Beginning to add support
	  for the ARMMv7-A, the Cortex-A5 in particular.  The initial checkin
	  is only fragmentary:  A few header files and some copied ARM9
	  assembly files.  More to come (2013-7-18).
	* arch/arm/include/sama5, arch/arm/src/sama5, and configs/sama5d3x-e:
	  Add a directory framework to support the Atmel AT91SAMA5D3 family and
	  the SAMA5D3x-EK board(s) in particular.  There is very little here on
	  the first check-in, this structure is being used now primarily to
	  create the Cortex-A5 support (2013-7-19).
	* arch/arm/src/armv7-a/arm_cache.S:  Cortex-A5 cache operations
	  (2013-7-20).
	* /arch/arm/src/armv7-a/arm_fpuconfig.S and fpu.h: A few more files for
	  the ARMv7-A/Cortex-A5 port (2013-7-21).
	* arch/arm/src/sama5/sam_boot.c, sam_clockconfig.h, sam_lowputc.h, and
	  sam_timerisr.c:  A few  more files for the SAMA5D3 port (2013-7-21).
	* configs/sama5d3x-ek/src/sam_autoleds.c:  A few more files for the port
	  to the SAMA5D3x-EK board (2013-7-21).
	* arch/arm/src/sama5/sam_irq.c: SAMA5 interrupt handling logic
	  (2013-7-22).
	* arch/arm/src/sama5/sam_clockconfig.c:  Add SAMA5 PLL configuration
	  logic (plus associated header files).  Initiali checkin is for the
	  SAM3U which is very similar but needs to be verified (2013-7-22).
	* arch/arm/src/sama5/sam_periphclks.h:  Add macros to enable and
	  disable SAMA5 peripheral clocks (2013-7-22).
	* arch/arm/src/sama5/sam_lowputc.c and sam_serial.c:  Add support
	  for SAMA5 UARTs.  Does not even compile as of initial checkin.
	  (2013-7-22).
	* arch/arm/src/sama5/sam_gpio.c:  Add GPIO configuratino support
	  for the SAMA5.  Still compilation issues.  (2013-7-22).
	* arch/arm/src/sama5/chip/sama5d3x_pinmap.h:  Add pin multiplexing
	  definitions for the SAMA5D3 (2013-7-23).
	* arch/arm/src/sama5/chip/:  New header files for SAMA5 AXI Matrix
	  SFR, and BSC blocks (2013-7-23).
